--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Ecommerce Microservice</description>
 	<properties>
 		<java.version>17</java.version>
+		<slf4j.version>2.0.12</slf4j.version>
 	</properties>
 	<dependencies>
 		<dependency>
