Added circuit-breaker in product service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,20 @@ spring.datasource.password=ujju
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Enable Actuator endpoints
+management.endpoints.web.exposure.include=*
+# Change the default actuator base path (optional)
+management.endpoints.web.base-path=/actuator
+# Enable health and info endpoints
+management.endpoint.health.show-details=always
+management.endpoint.info.enabled=true
+
+# ProductService Circuit Breaker Configuration
+resilience4j.circuitbreaker.instances.productService.register-health-indicator=true
+resilience4j.circuitbreaker.instances.productService.slidingWindowSize=100
+resilience4j.circuitbreaker.instances.productService.minimumNumberOfCalls=10
+resilience4j.circuitbreaker.instances.productService.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.productService.waitDurationInOpenState=60000
+resilience4j.circuitbreaker.instances.productService.permittedNumberOfCallsInHalfOpenState=10
+resilience4j.circuitbreaker.instances.productService.automaticTransitionFromOpenToHalfOpenEnabled=true
