added circuit-breakers and test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,35 @@ resilience4j.circuitbreaker.instances.productService.failureRateThreshold=50
 resilience4j.circuitbreaker.instances.productService.waitDurationInOpenState=60000
 resilience4j.circuitbreaker.instances.productService.permittedNumberOfCallsInHalfOpenState=10
 resilience4j.circuitbreaker.instances.productService.automaticTransitionFromOpenToHalfOpenEnabled=true
+
+resilience4j.circuitbreaker.instances.orderService.register-health-indicator=true
+resilience4j.circuitbreaker.instances.orderService.slidingWindowSize=100
+resilience4j.circuitbreaker.instances.orderService.minimumNumberOfCalls=10
+resilience4j.circuitbreaker.instances.orderService.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.orderService.waitDurationInOpenState=60000
+resilience4j.circuitbreaker.instances.orderService.permittedNumberOfCallsInHalfOpenState=10
+resilience4j.circuitbreaker.instances.orderService.automaticTransitionFromOpenToHalfOpenEnabled=true
+
+resilience4j.circuitbreaker.instances.customerService.register-health-indicator=true
+resilience4j.circuitbreaker.instances.customerService.slidingWindowSize=100
+resilience4j.circuitbreaker.instances.customerService.minimumNumberOfCalls=10
+resilience4j.circuitbreaker.instances.customerService.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.customerService.waitDurationInOpenState=60000
+resilience4j.circuitbreaker.instances.customerService.permittedNumberOfCallsInHalfOpenState=10
+resilience4j.circuitbreaker.instances.customerService.automaticTransitionFromOpenToHalfOpenEnabled=true
+
+resilience4j.circuitbreaker.instances.customerAddressService.register-health-indicator=true
+resilience4j.circuitbreaker.instances.customerAddressService.slidingWindowSize=100
+resilience4j.circuitbreaker.instances.customerAddressService.minimumNumberOfCalls=10
+resilience4j.circuitbreaker.instances.customerAddressService.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.customerAddressService.waitDurationInOpenState=60000
+resilience4j.circuitbreaker.instances.customerAddressService.permittedNumberOfCallsInHalfOpenState=10
+resilience4j.circuitbreaker.instances.customerAddressService.automaticTransitionFromOpenToHalfOpenEnabled=true
+
+resilience4j.circuitbreaker.instances.archivedOrdersService.register-health-indicator=true
+resilience4j.circuitbreaker.instances.archivedOrdersService.slidingWindowSize=100
+resilience4j.circuitbreaker.instances.archivedOrdersService.minimumNumberOfCalls=10
+resilience4j.circuitbreaker.instances.archivedOrdersService.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.archivedOrdersService.waitDurationInOpenState=60000
+resilience4j.circuitbreaker.instances.archivedOrdersService.permittedNumberOfCallsInHalfOpenState=10
+resilience4j.circuitbreaker.instances.archivedOrdersService.automaticTransitionFromOpenToHalfOpenEnabled=true
